--- a/src/css/style_chat.css
+++ b/src/css/style_chat.css
@@ -23,12 +23,14 @@ input[type="password"] {
 }
 
 button {
+    font-family: "Al Nile", sans-serif;
+    font-size: inherit;
+    background-color: #b44a72;
+    border: 2px solid #d9aec4;
     border-radius: 20px;
+    color: #d9aec4;
     padding: 10px;
-    background-color: #0084FF;
-    color: #fff;
     width: 6em;
-    border: 2px solid #0084FF;
 }
 
 button:hover,
@@ -70,7 +72,7 @@ button:focus {
     float: left;
     width: 120px;
     padding: 20px;
-    background-color: aliceblue;
+    background-color: #52667c;
     min-height: calc(100vh - 85px);
     max-height: calc(100vh - 85px);
     /*display: none;*/
@@ -118,7 +120,7 @@ button:focus {
 }
 
 #messages .message.event .content {
-    background-color: #FF7E29;
+    background-color: rgba(82, 102, 124, 0.85);
     color: #fff;
     margin-left: auto;
     margin-right: auto;
@@ -137,7 +139,7 @@ button:focus {
 }
 
 #messages .message.received .sender {
-    color: dimgrey;
+    color: rgba(19, 43, 69, 0.77);
     font-size: 10px;
 }
 
@@ -147,7 +149,7 @@ button:focus {
 }
 
 #messages .message.sent .content {
-    background-color: #0084FF;
+    background-color: rgba(180, 74, 114, 0.68);
     margin-left: auto;
     margin-right: 0;
     color: #fff;
